# server

./: .gitignore  CMakeLists.txt  LICENSE  README.MD  README_EN.MD  README_ZH.MD  README__ZH.MD  server.sln
3rdpart/: 3rdpart.sln  CMakeLists.txt
3rdpart/hiredis/: CMakeLists.txt  hiredis.vcxproj  hiredis.vcxproj.filters
3rdpart/hiredis/include/: dict.h
3rdpart/jsoncpp/: CMakeLists.txt  jsoncpp.vcxproj  jsoncpp.vcxproj.filters
3rdpart/jsoncpp/include/json/: assertions.h
3rdpart/jsoncpp/source/: json_reader.cpp  json_value.cpp  json_writer.cpp
3rdpart/zlib-1.2.11/: CMakeLists.txt  zlib.vcxproj  zlib.vcxproj.filters
Framework/: CMakeLists.txt  Framework.vcxproj  Framework.vcxproj.filters
Framework/Base/: BaseUtils.cpp  BaseUtils.h  IdentityAllocator.cpp  IdentityAllocator.h  IniConfig.cpp  IniConfig.h  Log.cpp  Log.h  Optional.h  Singleton.h
Framework/Constant/: ErrorDefines.h  RedisKeys.cpp  RedisKeys.h
Framework/Database/: DatabaseConnection.cpp  DatabaseConnection.h  DatabasePool.cpp  DatabasePool.h
Framework/Game/: DebtLiquidation.cpp  DebtLiquidation.h  GameAvatar.cpp  GameAvatar.h  GameDumb.cpp  GameDumb.h  GameMessages.cpp  GameMessages.h  GameRoom.cpp  GameRoom.h  GameRoomHandler.cpp  GameRoomHandler.h  GetAgencyTask.cpp  GetAgencyTask.h  GetCapitalTask.cpp  GetCapitalTask.h  GetCashPledgeTask.cpp  GetCashPledgeTask.h  RobotManager.cpp  RobotManager.h  ScoreboardTask.cpp  ScoreboardTask.h
Framework/Message/: MessageHandler.cpp  MessageHandler.h  MessageManager.cpp  MessageManager.h  MessageThreadPool.cpp  MessageThreadPool.h  MsgBase.cpp  MsgBase.h  MsgCreator.h  MsgDisconnect.cpp  MsgDisconnect.h  MsgWrapper.cpp  MsgWrapper.h  NetMessage.cpp  NetMessage.h
Framework/MySql/: MysqlPool.cpp  MysqlPool.h  MysqlQueryTask.cpp  MysqlQueryTask.h
Framework/Network/: Connection.cpp  Connection.h  EchoSession.cpp  EchoSession.h  MsgSession.cpp  MsgSession.h  SecurityManager.cpp  SecurityManager.h  Session.cpp  Session.h  TcpServer.cpp  TcpServer.h  WebsocketServer.cpp  WebsocketServer.h
Framework/Player/: LoadPlayerTask.cpp  LoadPlayerTask.h  Player.cpp  Player.h  PlayerManager.cpp  PlayerManager.h  PlayerMessages.cpp  PlayerMessages.h  PlayerSignatureHandler.cpp  PlayerSignatureHandler.h
Framework/Rabbitmq/: RabbitmqClient.cpp  RabbitmqClient.h  RabbitmqConfig.cpp  RabbitmqConfig.h  RabbitmqConnection.cpp  RabbitmqConnection.h  RabbitmqConsumer.cpp  RabbitmqConsumer.h  RabbitmqMessageHandler.cpp  RabbitmqMessageHandler.h  RabbitmqMessageJsonHandler.cpp  RabbitmqMessageJsonHandler.h  RabbitmqUtils.cpp  RabbitmqUtils.h
Framework/Redis/: RedisPool.cpp  RedisPool.h
Framework/Thread/: ThreadBlocker.cpp  ThreadBlocker.h  ThreadDispatch.cpp  ThreadDispatch.h  ThreadPool.cpp  ThreadPool.h  ThreadWorker.cpp  ThreadWorker.h  ThreadWorkerDumb.cpp  ThreadWorkerDumb.h
Framework/Timer/: TimerManager.cpp  TimerManager.h
Framework/Venue/: Venue.cpp  Venue.h  VenueInnerHandler.cpp  VenueInnerHandler.h  VenueLoader.cpp  VenueLoader.h  VenueManager.cpp  VenueManager.h  VenueMessages.cpp  VenueMessages.h  VenueOuterHandler.cpp  VenueOuterHandler.h
Mahjong/: CMakeLists.txt  Mahjong.vcxproj  Mahjong.vcxproj.filters  MahjongAction.cpp  MahjongAction.h  MahjongAvatar.cpp  MahjongAvatar.h  MahjongChapter.cpp  MahjongChapter.h  MahjongDealer.cpp  MahjongDealer.h  MahjongGenre.cpp  MahjongGenre.h  MahjongMessages.cpp  MahjongMessages.h  MahjongPlayback.cpp  MahjongPlayback.h  MahjongRoom.cpp  MahjongRoom.h  MahjongRoomHandler.cpp  MahjongRoomHandler.h  MahjongRule.cpp  MahjongRule.h  MahjongSettlement.cpp  MahjongSettlement.h  MahjongTile.cpp  MahjongTile.h
Poker/: CMakeLists.txt  DouDiZhuAvatar.cpp  DouDiZhuAvatar.h  DouDiZhuCombination.cpp  DouDiZhuCombination.h  DouDiZhuRule.cpp  DouDiZhuRule.h  NiuNiuRule.cpp  NiuNiuRule.h  Poker.vcxproj  Poker.vcxproj.filters  PokerAvatar.cpp  PokerAvatar.h  PokerCard.cpp  PokerCard.h  PokerCombination.cpp  PokerCombination.h  PokerDealer.cpp  PokerDealer.h  PokerGenre.cpp  PokerGenre.h  PokerRule.cpp  PokerRule.h  PokerUtilities.cpp  PokerUtilities.h
Server/: CMakeLists.txt  Example.cpp  Example.h  GameDefines.h  Server.vcxproj  Server.vcxproj.filters  main.cpp  server.ini
Server/BiJi/: BiJiAvatar.cpp  BiJiAvatar.h  BiJiLoader.cpp  BiJiLoader.h  BiJiMessages.cpp  BiJiMessages.h  BiJiRoom.cpp  BiJiRoom.h  BiJiRoomHandler.cpp  BiJiRoomHandler.h  BiJiRule.cpp  BiJiRule.h
Server/GuanDan/: GuanDanAvatar.cpp  GuanDanAvatar.h  GuanDanCandidateOrder.cpp  GuanDanCandidateOrder.h  GuanDanLoader.cpp  GuanDanLoader.h  GuanDanMessages.cpp  GuanDanMessages.h  GuanDanRoom.cpp  GuanDanRoom.h  GuanDanRoomHandler.cpp  GuanDanRoomHandler.h  GuanDanRule.cpp  GuanDanRule.h  GuanDanSearch.cpp  GuanDanSearch.h  GuanDanSearchGroup.cpp  GuanDanSearchGroup.h
Server/Lackey/: LackeyAvatar.cpp  LackeyAvatar.h  LackeyAvatarEx.cpp  LackeyAvatarEx.h  LackeyLoader.cpp  LackeyLoader.h  LackeyMessages.cpp  LackeyMessages.h  LackeyRoom.cpp  LackeyRoom.h  LackeyRoomHandler.cpp  LackeyRoomHandler.h  LackeyRule.cpp  LackeyRule.h
Server/NiuNiu100/: NiuNiu100Avatar.cpp  NiuNiu100Avatar.h  NiuNiu100Loader.cpp  NiuNiu100Loader.h  NiuNiu100Messages.cpp  NiuNiu100Messages.h  NiuNiu100Room.cpp  NiuNiu100Room.h  NiuNiu100RoomHandler.cpp  NiuNiu100RoomHandler.h
Server/StandardMahjong/: StandardMahjongAvatar.cpp  StandardMahjongAvatar.h  StandardMahjongLoader.cpp  StandardMahjongLoader.h  StandardMahjongMessages.cpp  StandardMahjongMessages.h  StandardMahjongPlayback.cpp  StandardMahjongPlayback.h  StandardMahjongRecordTask.cpp  StandardMahjongRecordTask.h  StandardMahjongRoom.cpp  StandardMahjongRoom.h  StandardMahjongRoomHandler.cpp  StandardMahjongRoomHandler.h
